# cld3

./: .gitignore  CHANGELOG.md  CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: publish.yml
cmake/: FetchProtobuf.cmake
gcld3/: __init__.py  pybind_ext.cc
gcld3/tests/: gcld3_test.py
misc/: myprotobuf.cmake
tests/: conftest.py  test_parity.py
tests/data/: corpus.json
tests/scripts/: parity_runner.cc
